--- a/NautilusOS-OneFile/index.html
+++ b/NautilusOS-OneFile/index.html
@@ -8625,7 +8625,9 @@ select {
                     <h3 id="displayUsername">User</h3>
                     <p>Standard User</p>
                 </div>
-                <button class="start-signout-btn" onclick="window.open('https://github.com/nautilus-os/NautilusOS', '_blank')" title="GitHub Repository"
+                <button class="start-signout-btn"
+                    onclick="window.open('https://github.com/nautilus-os/NautilusOS', '_blank')"
+                    title="GitHub Repository"
                     style="background: rgba(125, 211, 192, 0.15); border-color: rgba(125, 211, 192, 0.3); color: var(--accent);">
                     <i class="fab fa-github"></i>
                 </button>
@@ -8714,6 +8716,14 @@ select {
                 <div class="quick-action-desc">Close all windows</div>
             </div>
         </div>
+        <div class="quick-action-item"
+            onclick="hideQuickActions(); window.open('https://raw.githubusercontent.com/nautilus-os/NautilusOS/refs/heads/main/NautilusOS-OneFile/index.html', '_blank')">
+            <i class="fas fa-download"></i>
+            <div class="quick-action-content">
+                <div class="quick-action-title">Get OneFile</div>
+                <div class="quick-action-desc">Download standalone version</div>
+            </div>
+        </div>
         <div class="quick-action-item" onclick="hideQuickActions(); signOutToLogin()">
             <i class="fas fa-sign-out-alt"></i>
             <div class="quick-action-content">
@@ -8772,7 +8782,7 @@ select {
     <div class="properties-tooltip" id="propertiesTooltip">
         <div class="properties-close" onclick="hideProperties()">
             <i class="fas fa-times"></i>
-        </div> 
+        </div>
         <div class="properties-header">
             <div class="properties-icon" id="propIcon">
                 <i class="fas fa-folder"></i>
