Veltra OS - Firebase backend, AI improvements, game fixes

--- a/app/uv.html
+++ b/app/uv.html
@@ -294,7 +294,7 @@
 
     <div class="backgroundtext">
         <h1>ultraviolet</h1>
-        <p>made by $xor | built for nautilus-os</p>
+        <p>made by $xor | built for veltra-os</p>
     </div>
 
     <iframe src="" frameborder="0" id="iframe"></iframe>
@@ -369,7 +369,7 @@
             const tabElement = document.createElement("div")
             tabElement.classList.add("tab")
             tabElement.dataset.tabId = nTab.id
-            tabElement.innerHTML = `<img id="fav" data-fav-id="${nTab.id}" src="https://www.google.com/s2/favicons?domain=https://nautilus-os.vercel.app&sz=256"></img>&nbsp;&nbsp;<span class="btitle">New Tab</span> <div class="closetab"><i class="fas fa-times"></i></div>`
+            tabElement.innerHTML = `<img id="fav" data-fav-id="${nTab.id}" src="https://www.google.com/s2/favicons?domain=https://veltra-os.vercel.app&sz=256"></img>&nbsp;&nbsp;<span class="btitle">New Tab</span> <div class="closetab"><i class="fas fa-times"></i></div>`
 
             tabElement.addEventListener("click", (e) => {
                 if (!e.target.closest(".closetab")) {
@@ -521,7 +521,7 @@
                     if (loadC) {
                         loadC.innerHTML = `
                             <h1>ultraviolet</h1>
-                            <p>made by $xor | built for nautilus-os</p>
+                            <p>made by $xor | built for veltra-os</p>
                         `
                     }
                 }
