--- a/asdkfljhasdf.html
+++ b/asdkfljhasdf.html
@@ -16,7 +16,7 @@
     <div class="appstore-main" id="appstoreMain">
         <div class="appstore-header">
             <h2>Themes</h2>
-            <p>Customize your NautilusOS experience</p>
+            <p>Customize your Veltra experience</p>
         </div>
         <div class="appstore-grid">
             <div class="appstore-item">
@@ -24,7 +24,7 @@
                     <i class="fas fa-moon"></i>
                 </div>
                 <div class="appstore-item-name">Dark Theme by dinguschan</div>
-                <div class="appstore-item-desc">The default NautilusOS theme. Sleek dark interface with teal accents,
+                <div class="appstore-item-desc">The default Veltra theme. Sleek dark interface with teal accents,
                     perfect for extended use and reducing eye strain.</div>
                 <button class="appstore-item-btn installed" style="opacity: 0.6; cursor: not-allowed;" disabled>
                     Installed (Default)
