--- a/community/index.html
+++ b/community/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>NautilusOS Community</title>
-<meta name="description" content="The official community hub for NautilusOS apps, games, themes, and developer docs." />
+<title>Veltra Community</title>
+<meta name="description" content="The official community hub for Veltra apps, games, themes, and developer docs." />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css" />
@@ -14,7 +14,7 @@
 <body>
 <header class="site-header">
 <div class="container row between center">
-<a class="brand" href="./index.html">NautilusOS <span class="pill">Community</span></a>
+<a class="brand" href="./index.html">Veltra <span class="pill">Community</span></a>
 <nav class="nav">
 <a href="./index.html" class="active">Home</a>
 <a href="./browse.html">Browse</a>
@@ -28,8 +28,8 @@
 
 <main>
 <section class="hero container">
-<h1>Build, share, and discover <span class="accent">apps, games, and themes</span> for NautilusOS</h1>
-<p class="lede">This is the official community hub where creators publish content and users explore what’s new. Everything is reviewed by its developer(s) and the Nautilus team.</p>
+<h1>Build, share, and discover <span class="accent">apps, games, and themes</span> for Veltra</h1>
+<p class="lede">This is the official community hub where creators publish content and users explore what’s new. Everything is reviewed by its developer(s) and the Veltra team.</p>
 <div class="actions">
 <a class="btn" href="./browse.html">Explore content</a>
 <a class="btn ghost" href="./dev.html">Make something</a>
@@ -46,12 +46,12 @@
 </div>
 <div class="card">
 <h3>Games</h3>
-<p>Arcade, puzzles, and experimental gameplay for NautilusOS.</p>
+<p>Arcade, puzzles, and experimental gameplay for Veltra.</p>
 <a class="link" href="./browse.html#games">See games →</a>
 </div>
 <div class="card">
 <h3>Themes</h3>
-<p>Give NautilusOS a fresh coat of paint with community themes.</p>
+<p>Give Veltra a fresh coat of paint with community themes.</p>
 <a class="link" href="./browse.html#themes">See themes →</a>
 </div>
 </section>
@@ -65,7 +65,7 @@
 <div class="info">
 <h3>Quick links</h3>
 <div class="quick-links">
-<a href="https://github.com/nautilus-os/community" target="_blank" rel="noopener">Community repo</a>
+<a href="https://github.com/veltra-os/community" target="_blank" rel="noopener">Community repo</a>
 <a href="./dev.html#making-a-theme">Making a theme</a>
 <a href="./dev.html#making-an-app">Making an app</a>
 <a href="./request.html#submit">Submit app/game/theme</a>
@@ -79,11 +79,11 @@
 
 <footer class="site-footer">
 <div class="container row between center">
-<small>AGPL-3.0 • © NautilusOS community</small>
+<small>AGPL-3.0 • © Veltra community</small>
 <div class="row gap-sm">
 <a href="./help.html">Help</a>
 <a href="./request.html">Submit</a>
-<a href="https://github.com/nautilus-os/community" target="_blank" rel="noopener">GitHub</a>
+<a href="https://github.com/veltra-os/community" target="_blank" rel="noopener">GitHub</a>
 </div>
 </div>
 </footer>
