--- a/community/request.html
+++ b/community/request.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>How to Submit PRs - NautilusOS Community</title>
-<meta name="description" content="Learn how to submit pull requests to the NautilusOS community repository." />
+<title>How to Submit PRs - Veltra Community</title>
+<meta name="description" content="Learn how to submit pull requests to the Veltra community repository." />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./style.css" />
@@ -14,7 +14,7 @@
 <body>
 <header class="site-header">
 <div class="container row between center">
-<a class="brand" href="./index.html">NautilusOS <span class="pill">Community</span></a>
+<a class="brand" href="./index.html">Veltra <span class="pill">Community</span></a>
 <nav class="nav">
 <a href="./index.html">Home</a>
 <a href="./browse.html">Browse</a>
@@ -29,17 +29,17 @@
 <main>
 <section class="hero container">
 <h1>How to Submit Pull Requests</h1>
-<p class="lede">Contribute to the NautilusOS community by submitting pull requests to improve the repository.</p>
+<p class="lede">Contribute to the Veltra community by submitting pull requests to improve the repository.</p>
 </section>
 
 <section class="container">
 <div class="card prose">
 <h2>Step-by-Step Guide</h2>
-<p>Follow these steps to submit a pull request (PR) to the <a href="https://github.com/nautilus-os/community" target="_blank" rel="noopener">NautilusOS Community repository</a>.</p>
+<p>Follow these steps to submit a pull request (PR) to the <a href="https://github.com/veltra-os/community" target="_blank" rel="noopener">Veltra Community repository</a>.</p>
 
 <ol>
 <li><strong>Fork the Repository</strong><br>
-Click the "Fork" button on the <a href="https://github.com/nautilus-os/community" target="_blank" rel="noopener">repository page</a> to create your own copy.</li>
+Click the "Fork" button on the <a href="https://github.com/veltra-os/community" target="_blank" rel="noopener">repository page</a> to create your own copy.</li>
 
 <li><strong>Clone Your Fork</strong><br>
 Clone the forked repository to your local machine:<br>
@@ -81,11 +81,11 @@ Go to the original repository and click "New Pull Request". Select your branch a
 
 <footer class="site-footer">
 <div class="container row between center">
-<small>AGPL-3.0 • © NautilusOS community</small>
+<small>AGPL-3.0 • © Veltra community</small>
 <div class="row gap-sm">
 <a href="./help.html">Help</a>
 <a href="./request.html">Contribute</a>
-<a href="https://github.com/nautilus-os/community" target="_blank" rel="noopener">GitHub</a>
+<a href="https://github.com/veltra-os/community" target="_blank" rel="noopener">GitHub</a>
 </div>
 </div>
 </footer>
