--- a/community/browse.html
+++ b/community/browse.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Browse • NautilusOS Community</title>
+<title>Browse • Veltra Community</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./style.css" />
 <script defer src="./scripts.js"></script>
@@ -11,7 +11,7 @@
 <body>
 <header class="site-header">
 <div class="container row between center">
-<a class="brand" href="./index.html">NautilusOS <span class="pill">Community</span></a>
+<a class="brand" href="./index.html">Veltra <span class="pill">Community</span></a>
 <nav class="nav">
 <a href="./index.html">Home</a>
 <a class="active" href="./browse.html">Browse</a>
@@ -26,17 +26,17 @@
 <main class="container">
 <h1>Browse</h1>
 
-<section id="catalog" class="catalog" data-src="https://raw.githubusercontent.com/nautilus-os/community/main/apps.json" data-src2="https://raw.githubusercontent.com/nautilus-os/community/main/games.json" data-src3="https://raw.githubusercontent.com/nautilus-os/community/main/themes.json"></section>
+<section id="catalog" class="catalog" data-src="https://raw.githubusercontent.com/veltra-os/community/main/apps.json" data-src2="https://raw.githubusercontent.com/veltra-os/community/main/games.json" data-src3="https://raw.githubusercontent.com/veltra-os/community/main/themes.json"></section>
 </main>
 
 
 <footer class="site-footer">
 <div class="container row between center">
-<small>AGPL-3.0 • © NautilusOS community</small>
+<small>AGPL-3.0 • © Veltra community</small>
 <div class="row gap-sm">
 <a href="./help.html">Help</a>
 <a href="./request.html">Submit</a>
-<a href="https://github.com/nautilus-os/community" target="_blank" rel="noopener">GitHub</a>
+<a href="https://github.com/veltra-os/community" target="_blank" rel="noopener">GitHub</a>
 </div>
 </div>
 </footer>
