--- a/community/dev.html
+++ b/community/dev.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Developers • NautilusOS Community</title>
+<title>Developers • Veltra Community</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
 <header class="site-header">
 <div class="container row between center">
-<a class="brand" href="./index.html">NautilusOS <span class="pill">Community</span></a>
+<a class="brand" href="./index.html">Veltra <span class="pill">Community</span></a>
 <nav class="nav">
 <a href="./index.html">Home</a>
 <a href="./browse.html">Browse</a>
@@ -24,7 +24,7 @@
 
 <main class="container prose">
 <h1>Developer Guide</h1>
-<p>Everything you need to create apps, games, and themes for NautilusOS.</p>
+<p>Everything you need to create apps, games, and themes for Veltra.</p>
 
 
 <h2 id="getting-started">Getting started</h2>
@@ -35,7 +35,7 @@
 
 
 <h2 id="making-a-theme">Making a theme</h2>
-<p>Copy the base style from the NautilusOS repo’s <code>style.css</code> into your own <code>[themename].css</code> and customize it.</p>
+<p>Copy the base style from the Veltra repo’s <code>style.css</code> into your own <code>[themename].css</code> and customize it.</p>
 
 
 <h2 id="making-an-app">Making an app</h2>
@@ -46,7 +46,7 @@
 </ul>
 <h3>Embedded app</h3>
 <ul>
-<li>Rendered from JS within NautilusOS; works offline.</li>
+<li>Rendered from JS within Veltra; works offline.</li>
 <li>No external scripts/styles; follow built-in theme classes.</li>
 </ul>
 
@@ -82,11 +82,11 @@
 
 <footer class="site-footer">
 <div class="container row between center">
-<small>AGPL-3.0 • © NautilusOS community</small>
+<small>AGPL-3.0 • © Veltra community</small>
 <div class="row gap-sm">
 <a href="./help.html">Help</a>
 <a href="./request.html">Submit</a>
-<a href="https://github.com/nautilus-os/community" target="_blank" rel="noopener">GitHub</a>
+<a href="https://github.com/veltra-os/community" target="_blank" rel="noopener">GitHub</a>
 </div>
 </div>
 </footer>
