--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=SUSE+Mono:ital,wght@0,100..800;1,100..800&display=swap"
         rel="stylesheet">
-    <script src="/uv/uv.bundle.js"></script>
-    <script src="/uv/uv.config.js"></script>
-    <script src="/uv/uv.sw.js"></script>
-    <script src="/baremux/index.js"></script>
+    <script src="uv/uv.bundle.js"></script>
+    <script src="uv/uv.config.js"></script>
+    <script src="uv/uv.sw.js"></script>
+    <script src="baremux/index.js"></script>
     <script src="v86/cache-detector.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.15.0/dist/tf.min.js"></script>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/open-props">
     <link rel="stylesheet" href="https://unpkg.com/open-props/normalize.min.css">
     <link rel="stylesheet" href="https://unpkg.com/open-props/buttons.min.css">
@@ -694,13 +694,17 @@
             </div>
         </div>
     </div>
-    <script src="/js/main.js" defer></script>
+    <script src="js/main.js" defer></script>
 
     <script>
+        // Get base path for GitHub Pages compatibility
+        const basePath = window.location.pathname.includes('/veltra') ? '/veltra' : '';
+        
         // register sw
         if ("serviceWorker" in navigator) {
             window.addEventListener("load", () => {
-                navigator.serviceWorker.register("/uv/sw.js")
+                navigator.serviceWorker.register(basePath + "/uv/sw.js", { scope: basePath + "/uv/" })
+                    .catch(err => console.warn('Service worker registration failed:', err));
             })
         }
     </script>
@@ -787,7 +791,7 @@
         }
         
         // Initialize connection
-        const connection = new BareMux.BareMuxConnection("/baremux/worker.js");
+        const connection = new BareMux.BareMuxConnection(basePath + "/baremux/worker.js");
         let wispUrl = localStorage.getItem("veltra_wispUrl") || FALLBACK_WISP_URL;
         const bareUrl = localStorage.getItem("veltra_bareUrl") || "https://useclassplay.vercel.app/fq/";
 
