--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@
             <div class="desktop-icon" ondblclick="openApp('editor')" data-app="editor">
                 <i class="fas fa-edit"></i> <span>Text Editor</span>
             </div>
-            <div class="desktop-icon" ondblclick="openApp('music')" data-app="music">
-                <i class="fas fa-music"></i> <span>Music</span>
+            <div class="desktop-icon" ondblclick="openApp('melodify')" data-app="melodify">
+                <i class="fas fa-music"></i> <span>Melodify</span>
             </div>
             <div class="desktop-icon" ondblclick="openApp('photos')" data-app="photos">
                 <i class="fas fa-images"></i> <span>Photos</span>
@@ -700,12 +700,25 @@
         // Get base path for GitHub Pages compatibility
         const basePath = window.location.pathname.includes('/veltra') ? '/veltra' : '';
         
-        // register sw
+        // register sw with proper scope for UV proxy
         if ("serviceWorker" in navigator) {
-            window.addEventListener("load", () => {
-                navigator.serviceWorker.register(basePath + "/uv/sw.js", { scope: basePath + "/uv/" })
-                    .catch(err => console.warn('Service worker registration failed:', err));
-            })
+            window.addEventListener("load", async () => {
+                try {
+                    const registration = await navigator.serviceWorker.register(basePath + "/uv/sw.js", { 
+                        scope: basePath + "/uv/service/"
+                    });
+                    console.log('✅ UV Service Worker registered with scope:', registration.scope);
+                } catch (err) {
+                    console.warn('⚠️ Service worker registration failed:', err);
+                    // Try alternate scope
+                    try {
+                        const reg2 = await navigator.serviceWorker.register(basePath + "/uv/sw.js");
+                        console.log('✅ UV Service Worker registered (default scope):', reg2.scope);
+                    } catch (err2) {
+                        console.error('❌ Service worker registration completely failed:', err2);
+                    }
+                }
+            });
         }
     </script>
 
