Add cache bust version to uv.html

--- a/app/uv.html
+++ b/app/uv.html
@@ -8,6 +8,8 @@
     <script>
         // Detect base path for GitHub Pages
         const uvBasePath = window.location.pathname.includes('/veltra') ? '/veltra' : '';
+        // Cache bust version
+        const uvVersion = '2.0.1';
     </script>
     <script src="../uv/uv.bundle.js"></script>
     <script src="../uv/uv.config.js"></script>
