Fix UV proxy path detection for /veltra/app/ subdirectory
- uv.config.js now properly detects /veltra base path when loaded from /app/
- Fixed go() function in uv.html to use basePath for libcurl

--- a/app/uv.html
+++ b/app/uv.html
@@ -510,7 +510,7 @@
         async function go(u) {
 
             if (!await connection.getTransport()) {
-                connection.setTransport("/libcurl/index.mjs", [{ websocket: wispUrl }])
+                connection.setTransport(basePath + "/libcurl/index.mjs", [{ websocket: wispUrl }])
             }
 
             console.log("a")
