Add Unblocker - Real browser proxy with 60fps streaming
- New app: Unblocker (Playwright-based browser streaming proxy)
- Works with TikTok, Now.gg, Roblox, Discord, etc.
- 60 FPS WebSocket streaming with full input support
- Backend URL from Firebase (bestproxy)
- Added to desktop, start menu, and App Store
- Preinstalled by default

--- a/index.html
+++ b/index.html
@@ -448,6 +448,9 @@
             <div class="desktop-icon" ondblclick="openApp('browser')" data-app="browser">
                 <i class="fas fa-globe"></i> <span>Veltra Browser</span>
             </div>
+            <div class="desktop-icon" ondblclick="openApp('unblocker')" data-app="unblocker">
+                <i class="fas fa-unlock-alt"></i> <span>Unblocker</span>
+            </div>
             <div class="desktop-icon" ondblclick="openApp('ai-snake')" data-app="ai-snake">
                 <i class="fas fa-brain"></i> <span>AI Snake Learning</span>
             </div>
@@ -534,6 +537,9 @@
                 </div>
                 <div class="app-item" onclick="openApp('browser')">
                     <i class="fas fa-globe"></i> <span>Veltra Browser</span>
+                </div>
+                <div class="app-item" onclick="openApp('unblocker')">
+                    <i class="fas fa-unlock-alt"></i> <span>Unblocker</span>
                 </div>
                 <div class="app-item" onclick="openApp('settings')">
                     <i class="fas fa-cog"></i> <span>Settings</span>
