--- a/app/unblocker.html
+++ b/app/unblocker.html
@@ -532,16 +532,28 @@
                 showBrowser();
             };
 
-            ws.onmessage = (e) => {
-                const data = JSON.parse(e.data);
+            ws.onmessage = async (e) => {
+                // Handle binary Blob data (frames)
+                if (e.data instanceof Blob) {
+                    const url = URL.createObjectURL(e.data);
+                    renderFrameFromUrl(url);
+                    return;
+                }
 
-                if (data.type === 'frame') {
-                    renderFrame(data.data);
-                    latency = Date.now() - data.timestamp;
-                } else if (data.type === 'url') {
-                    currentUrlInput.value = data.url;
-                } else if (data.type === 'fullscreen_request') {
-                    toggleFullscreen();
+                // Handle JSON messages
+                try {
+                    const data = JSON.parse(e.data);
+
+                    if (data.type === 'frame') {
+                        renderFrame(data.data);
+                        latency = Date.now() - data.timestamp;
+                    } else if (data.type === 'url') {
+                        currentUrlInput.value = data.url;
+                    } else if (data.type === 'fullscreen_request') {
+                        toggleFullscreen();
+                    }
+                } catch (err) {
+                    console.warn('WebSocket message parse error:', err);
                 }
             };
 
@@ -595,7 +607,33 @@
             landingPage.style.display = 'flex';
         }
 
-        // Render frame
+        // Render frame from Blob URL
+        function renderFrameFromUrl(url) {
+            const img = new Image();
+            img.onload = () => {
+                if (canvas.width !== img.width || canvas.height !== img.height) {
+                    canvas.width = img.width;
+                    canvas.height = img.height;
+                }
+                ctx.drawImage(img, 0, 0);
+                URL.revokeObjectURL(url); // Free memory
+
+                frameCount++;
+                const now = Date.now();
+                if (now - lastFpsUpdate >= 1000) {
+                    fps = frameCount;
+                    frameCount = 0;
+                    lastFpsUpdate = now;
+                    statsEl.textContent = 'FPS: ' + fps + ' | Streaming';
+                }
+
+                loadingOverlay.classList.add('hidden');
+            };
+            img.onerror = () => URL.revokeObjectURL(url);
+            img.src = url;
+        }
+
+        // Render frame from base64
         function renderFrame(base64Data) {
             const img = new Image();
             img.onload = () => {
