Best Proxy - Coming Soon placeholder

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 <i class="fas fa-globe"></i> <span>Veltra Browser</span>
             </div>
             <div class="desktop-icon" ondblclick="openApp('unblocker')" data-app="unblocker">
-                <i class="fas fa-unlock-alt"></i> <span>Unblocker</span>
+                <i class="fas fa-unlock-alt"></i> <span>Best Proxy</span>
             </div>
             <div class="desktop-icon" ondblclick="openApp('ai-snake')" data-app="ai-snake">
                 <i class="fas fa-brain"></i> <span>AI Snake Learning</span>
@@ -539,7 +539,7 @@
                     <i class="fas fa-globe"></i> <span>Veltra Browser</span>
                 </div>
                 <div class="app-item" onclick="openApp('unblocker')">
-                    <i class="fas fa-unlock-alt"></i> <span>Unblocker</span>
+                    <i class="fas fa-unlock-alt"></i> <span>Best Proxy</span>
                 </div>
                 <div class="app-item" onclick="openApp('settings')">
                     <i class="fas fa-cog"></i> <span>Settings</span>
