Rename to Nebula - Coming Soon page with custom SVG logo

--- a/index.html
+++ b/index.html
@@ -448,8 +448,8 @@
             <div class="desktop-icon" ondblclick="openApp('browser')" data-app="browser">
                 <i class="fas fa-globe"></i> <span>Veltra Browser</span>
             </div>
-            <div class="desktop-icon" ondblclick="openApp('unblocker')" data-app="unblocker">
-                <i class="fas fa-unlock-alt"></i> <span>Best Proxy</span>
+            <div class="desktop-icon" ondblclick="openApp('nebula')" data-app="nebula">
+                <i class="fas fa-cloud"></i> <span>Nebula</span>
             </div>
             <div class="desktop-icon" ondblclick="openApp('ai-snake')" data-app="ai-snake">
                 <i class="fas fa-brain"></i> <span>AI Snake Learning</span>
@@ -538,8 +538,8 @@
                 <div class="app-item" onclick="openApp('browser')">
                     <i class="fas fa-globe"></i> <span>Veltra Browser</span>
                 </div>
-                <div class="app-item" onclick="openApp('unblocker')">
-                    <i class="fas fa-unlock-alt"></i> <span>Best Proxy</span>
+                <div class="app-item" onclick="openApp('nebula')">
+                    <i class="fas fa-cloud"></i> <span>Nebula</span>
                 </div>
                 <div class="app-item" onclick="openApp('settings')">
                     <i class="fas fa-cog"></i> <span>Settings</span>
