--- a/app/nebula.html
+++ b/app/nebula.html
@@ -3,219 +3,273 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nebula — Coming Soon</title>
+    <title>Nebula</title>
     <style>
-        :root {
-            --bg1: #0a0e1a;
-            --bg2: #151923;
-            --accent: #a78bfa;
-            --accent2: #8b5cf6;
-            --text: #e2e8f0;
-            --muted: #94a3b8;
-        }
-
         * { box-sizing: border-box; margin: 0; padding: 0; }
         
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, var(--bg1) 0%, var(--bg2) 100%);
+            background: #050508;
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: var(--text);
+            color: #c9c9d4;
             overflow: hidden;
             position: relative;
         }
 
-        /* Nebula background effect */
+        /* Deep space background */
         body::before {
             content: '';
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 600px;
-            height: 600px;
-            background: radial-gradient(ellipse at center, rgba(167, 139, 250, 0.15) 0%, rgba(139, 92, 246, 0.05) 40%, transparent 70%);
+            inset: 0;
+            background: 
+                radial-gradient(ellipse at 30% 20%, rgba(88, 28, 135, 0.15) 0%, transparent 50%),
+                radial-gradient(ellipse at 70% 80%, rgba(126, 34, 206, 0.1) 0%, transparent 40%),
+                radial-gradient(circle at 50% 50%, rgba(15, 15, 20, 1) 0%, #050508 100%);
             pointer-events: none;
-            animation: pulse-bg 4s ease-in-out infinite;
         }
 
-        @keyframes pulse-bg {
-            0%, 100% { opacity: 0.6; transform: translate(-50%, -50%) scale(1); }
-            50% { opacity: 1; transform: translate(-50%, -50%) scale(1.1); }
+        /* Floating particles */
+        body::after {
+            content: '';
+            position: absolute;
+            inset: 0;
+            background-image: 
+                radial-gradient(1px 1px at 20% 30%, rgba(168, 85, 247, 0.4) 0%, transparent 100%),
+                radial-gradient(1px 1px at 40% 70%, rgba(139, 92, 246, 0.3) 0%, transparent 100%),
+                radial-gradient(1px 1px at 60% 20%, rgba(168, 85, 247, 0.3) 0%, transparent 100%),
+                radial-gradient(1px 1px at 80% 60%, rgba(126, 34, 206, 0.4) 0%, transparent 100%),
+                radial-gradient(1px 1px at 10% 80%, rgba(168, 85, 247, 0.2) 0%, transparent 100%),
+                radial-gradient(1px 1px at 90% 10%, rgba(139, 92, 246, 0.3) 0%, transparent 100%);
+            pointer-events: none;
+            animation: drift 20s linear infinite;
+        }
+
+        @keyframes drift {
+            0% { transform: translateY(0); }
+            100% { transform: translateY(-20px); }
         }
 
         .container {
             text-align: center;
             padding: 40px;
-            max-width: 500px;
+            max-width: 520px;
             position: relative;
             z-index: 1;
         }
 
         .logo {
-            width: 100px;
-            height: 100px;
-            margin: 0 auto 24px;
+            width: 120px;
+            height: 120px;
+            margin: 0 auto 28px;
             position: relative;
+            animation: float 4s ease-in-out infinite;
         }
 
         .logo svg {
             width: 100%;
             height: 100%;
-            animation: float 3s ease-in-out infinite;
+            filter: drop-shadow(0 0 20px rgba(126, 34, 206, 0.4));
         }
 
         @keyframes float {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-10px); }
+            0%, 100% { transform: translateY(0) rotate(0deg); }
+            50% { transform: translateY(-12px) rotate(3deg); }
+        }
+
+        /* Orbit ring around logo */
+        .logo::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 150%;
+            height: 40%;
+            border: 1px solid rgba(168, 85, 247, 0.2);
+            border-radius: 50%;
+            transform: translate(-50%, -50%) rotateX(70deg);
+            animation: orbit-pulse 3s ease-in-out infinite;
+        }
+
+        @keyframes orbit-pulse {
+            0%, 100% { opacity: 0.3; }
+            50% { opacity: 0.6; }
         }
 
         .title {
-            font-size: 2.8rem;
+            font-size: 3rem;
             font-weight: 800;
-            background: linear-gradient(135deg, var(--accent), var(--accent2), #c4b5fd);
+            background: linear-gradient(135deg, #a855f7 0%, #7c3aed 50%, #581c87 100%);
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
-            margin-bottom: 12px;
-            letter-spacing: -0.5px;
+            margin-bottom: 8px;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+        }
+
+        .subtitle {
+            font-size: 0.85rem;
+            color: #6b6b80;
+            letter-spacing: 4px;
+            text-transform: uppercase;
+            margin-bottom: 28px;
         }
 
         .badge {
             display: inline-flex;
             align-items: center;
-            gap: 8px;
-            padding: 8px 16px;
-            background: rgba(251, 191, 36, 0.15);
-            border: 1px solid rgba(251, 191, 36, 0.4);
-            border-radius: 20px;
-            color: #fbbf24;
-            font-size: 0.9rem;
+            gap: 10px;
+            padding: 10px 20px;
+            background: rgba(126, 34, 206, 0.1);
+            border: 1px solid rgba(126, 34, 206, 0.3);
+            border-radius: 24px;
+            color: #a855f7;
+            font-size: 0.85rem;
             font-weight: 600;
-            margin-bottom: 24px;
+            margin-bottom: 28px;
+            letter-spacing: 1px;
         }
 
-        .pulse {
-            display: inline-block;
-            width: 10px;
-            height: 10px;
-            background: #fbbf24;
+        .pulse-dot {
+            width: 8px;
+            height: 8px;
+            background: #a855f7;
             border-radius: 50%;
             animation: pulse 2s infinite;
+            box-shadow: 0 0 10px #a855f7;
         }
 
         @keyframes pulse {
-            0%, 100% { opacity: 1; transform: scale(1); }
-            50% { opacity: 0.5; transform: scale(0.9); }
+            0%, 100% { opacity: 1; box-shadow: 0 0 10px #a855f7; }
+            50% { opacity: 0.4; box-shadow: 0 0 5px #a855f7; }
         }
 
         .description {
-            color: var(--muted);
-            font-size: 1.1rem;
-            line-height: 1.6;
-            margin-bottom: 32px;
+            color: #8888a0;
+            font-size: 1rem;
+            line-height: 1.7;
+            margin-bottom: 36px;
         }
 
         .features {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 16px;
-            margin-bottom: 32px;
+            gap: 14px;
+            margin-bottom: 36px;
         }
 
         .feature {
-            padding: 20px;
-            background: rgba(167, 139, 250, 0.05);
-            border: 1px solid rgba(167, 139, 250, 0.2);
+            padding: 18px 14px;
+            background: rgba(10, 10, 15, 0.6);
+            border: 1px solid rgba(126, 34, 206, 0.15);
             border-radius: 12px;
             text-align: center;
             transition: all 0.3s;
+            backdrop-filter: blur(10px);
         }
 
         .feature:hover {
-            background: rgba(167, 139, 250, 0.1);
-            border-color: rgba(167, 139, 250, 0.4);
-            transform: translateY(-2px);
+            background: rgba(126, 34, 206, 0.08);
+            border-color: rgba(126, 34, 206, 0.35);
+            transform: translateY(-3px);
         }
 
         .feature-icon {
-            width: 40px;
-            height: 40px;
-            margin: 0 auto 12px;
-            background: linear-gradient(135deg, var(--accent), var(--accent2));
-            border-radius: 10px;
+            width: 36px;
+            height: 36px;
+            margin: 0 auto 10px;
+            background: linear-gradient(135deg, #7c3aed, #581c87);
+            border-radius: 8px;
             display: flex;
             align-items: center;
             justify-content: center;
+            box-shadow: 0 4px 15px rgba(126, 34, 206, 0.3);
         }
 
         .feature-icon svg {
-            width: 20px;
-            height: 20px;
-            fill: white;
+            width: 18px;
+            height: 18px;
+            fill: #e9d5ff;
         }
 
         .feature h3 {
-            font-size: 0.95rem;
-            color: var(--text);
-            margin-bottom: 4px;
+            font-size: 0.85rem;
+            color: #d4d4e0;
+            margin-bottom: 3px;
+            font-weight: 600;
         }
 
         .feature p {
-            font-size: 0.8rem;
-            color: var(--muted);
+            font-size: 0.75rem;
+            color: #6b6b80;
         }
 
         .tagline {
-            color: var(--accent);
-            font-size: 1rem;
-            font-weight: 500;
+            color: #6b6b80;
+            font-size: 0.9rem;
+            font-style: italic;
+        }
+
+        .tagline span {
+            color: #a855f7;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <!-- Nebula Logo SVG -->
+        <!-- Planet Logo -->
         <div class="logo">
-            <svg viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg viewBox="0 0 458.758 458.758" xmlns="http://www.w3.org/2000/svg">
                 <defs>
-                    <linearGradient id="nebulaGrad" x1="0%" y1="0%" x2="100%" y2="100%">
-                        <stop offset="0%" style="stop-color:#a78bfa"/>
-                        <stop offset="100%" style="stop-color:#8b5cf6"/>
+                    <linearGradient id="planetGrad" x1="0%" y1="0%" x2="100%" y2="100%">
+                        <stop offset="0%" style="stop-color:#1a1a2e"/>
+                        <stop offset="40%" style="stop-color:#0f0f18"/>
+                        <stop offset="100%" style="stop-color:#050508"/>
+                    </linearGradient>
+                    <linearGradient id="ringGrad" x1="0%" y1="0%" x2="100%" y2="100%">
+                        <stop offset="0%" style="stop-color:#a855f7"/>
+                        <stop offset="50%" style="stop-color:#7c3aed"/>
+                        <stop offset="100%" style="stop-color:#581c87"/>
                     </linearGradient>
                     <filter id="glow">
-                        <feGaussianBlur stdDeviation="3" result="coloredBlur"/>
+                        <feGaussianBlur stdDeviation="4" result="coloredBlur"/>
                         <feMerge>
                             <feMergeNode in="coloredBlur"/>
                             <feMergeNode in="SourceGraphic"/>
                         </feMerge>
                     </filter>
                 </defs>
-                <!-- Outer glow circle -->
-                <circle cx="50" cy="50" r="45" fill="url(#nebulaGrad)" opacity="0.15" filter="url(#glow)"/>
-                <!-- Main nebula shape -->
-                <circle cx="50" cy="50" r="35" fill="url(#nebulaGrad)" filter="url(#glow)"/>
-                <!-- Inner highlight -->
-                <circle cx="38" cy="38" r="12" fill="rgba(255,255,255,0.3)"/>
-                <!-- Stars/particles -->
-                <circle cx="70" cy="30" r="3" fill="white" opacity="0.8"/>
-                <circle cx="25" cy="65" r="2" fill="white" opacity="0.6"/>
-                <circle cx="75" cy="70" r="2.5" fill="white" opacity="0.7"/>
+                <g filter="url(#glow)">
+                    <path fill="url(#ringGrad)" d="M448.189,10.579c-11.9-11.9-30.2-13.8-54.3-5.5c-10.6,3.6-22.6,9.2-36.1,16.8c-8.1,4.6-16.8,9.8-25.8,15.8
+                        c-2.4,1.6-4.8,3.2-7.3,4.9c13.8,7,26.7,15.5,38.6,25.5c2.8-1.7,5.4-3.4,8-4.9c22.8-13.6,37.1-18.8,44.6-20.3
+                        c-2,10.1-10.7,32.8-37.9,72c-2.2,3.1-4.4,6.3-6.7,9.5c-5.1-6.9-10.8-13.6-17.1-19.8c-68.9-68.9-180.7-68.9-249.6,0
+                        s-68.9,180.7,0,249.6c6.3,6.3,12.9,12,19.8,17.1c-3.2,2.3-6.4,4.5-9.5,6.7c-39.2,27.1-61.9,35.9-72,37.9c1.2-6.1,4.9-17,13.8-33.4
+                        c3.1-5.7,6.8-12.1,11.3-19.2c-9.9-11.9-18.4-24.8-25.5-38.6c-1.7,2.4-3.3,4.9-4.9,7.3c-8.3,12.6-15.2,24.3-20.7,35
+                        c-5.1,9.8-9,18.8-11.8,26.9c-8.2,24.1-6.4,42.4,5.5,54.3s30.2,13.8,54.3,5.5c17-5.8,37.8-16.8,61.9-32.6
+                        c47.6-31.3,104.4-79,159.8-134.4s103.2-112.2,134.4-159.8c15.8-24.1,26.8-44.9,32.6-61.9
+                        C461.889,40.779,460.089,22.579,448.189,10.579z M103.889,246.179c-9.3,0-16.8-7.5-16.8-16.8c0-38.2,14.9-74.2,41.9-101.2
+                        c6.6-6.6,17.2-6.6,23.8,0c6.6,6.6,6.6,17.2,0,23.8c-20.7,20.7-32.1,48.2-32.1,77.4
+                        C120.789,238.679,113.189,246.179,103.889,246.179z"/>
+                    <path fill="url(#planetGrad)" stroke="url(#ringGrad)" stroke-width="3" d="M310.189,310.179c-35,35-70.6,67-104.3,94.1c52.6,7,107.9-9.7,148.3-50.1c40.5-40.5,57.2-95.7,50.1-148.3
+                        C377.189,239.579,345.189,275.179,310.189,310.179z"/>
+                </g>
             </svg>
         </div>
 
         <h1 class="title">Nebula</h1>
+        <p class="subtitle">Beyond the Void</p>
         
         <div class="badge">
-            <span class="pulse"></span>
+            <span class="pulse-dot"></span>
             Coming Soon
         </div>
 
         <p class="description">
-            The ultimate browser proxy is in development. Real Chromium browser streaming at 60 FPS — TikTok, Now.gg, Roblox, and more will all work perfectly.
+            A real browser in the cloud. Stream any website at 60 FPS with full interaction. 
+            No blocks. No detection. Pure access.
         </p>
 
         <div class="features">
@@ -224,32 +278,32 @@
                     <svg viewBox="0 0 24 24"><path d="M4 4h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2zm0 2v12h16V6H4z"/></svg>
                 </div>
                 <h3>Real Browser</h3>
-                <p>Chromium on server</p>
+                <p>Chromium in the cloud</p>
             </div>
             <div class="feature">
                 <div class="feature-icon">
                     <svg viewBox="0 0 24 24"><path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/></svg>
                 </div>
-                <h3>60 FPS</h3>
-                <p>Smooth streaming</p>
+                <h3>60 FPS Stream</h3>
+                <p>Smooth like native</p>
             </div>
             <div class="feature">
                 <div class="feature-icon">
                     <svg viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"/></svg>
                 </div>
-                <h3>Works Everywhere</h3>
-                <p>No site blocks it</p>
+                <h3>Undetectable</h3>
+                <p>Works everywhere</p>
             </div>
             <div class="feature">
                 <div class="feature-icon">
                     <svg viewBox="0 0 24 24"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"/></svg>
                 </div>
-                <h3>Private</h3>
-                <p>IP stays hidden</p>
+                <h3>Anonymous</h3>
+                <p>Your IP hidden</p>
             </div>
         </div>
 
-        <p class="tagline">Stay tuned for the release!</p>
+        <p class="tagline">Enter the <span>void</span></p>
     </div>
 </body>
 </html>
