Add new Veltra logo to bootloader, walkthrough, favicon; Fix Font Awesome in apps

--- a/app/walkthrough.html
+++ b/app/walkthrough.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Veltra</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
             margin: 0;
@@ -373,8 +374,8 @@
 
         <!-- Slide 1: Welcome -->
         <div class="slide active" id="slide-0">
-            <div class="slide-icon animate-in">
-                <i class="fas fa-fish"></i>
+            <div class="slide-icon animate-in" style="background: transparent; border: none;">
+                <img src="../logo.png" alt="Veltra" style="width: 100px; height: 100px; object-fit: contain;">
             </div>
             <h1 class="animate-in delay-1">Welcome to Veltra!</h1>
             <p class="animate-in delay-2">
