--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
+    <link rel="icon" type="image/png" href="logo.png">
     <title>Veltra</title>
     
     <!-- Firebase SDK -->
@@ -88,7 +89,7 @@
     </div>
 
     <div id="bootloader">
-        <div class="boot-logo"><i class="fas fa-fish"></i></div>
+        <div class="boot-logo"><img src="logo.png" alt="Veltra" style="width: 80px; height: 80px; object-fit: contain;"></div>
         <h1 class="boot-title"><b>Veltra</b></h1>
         <div class="boot-version">Version 1.5</div>
         <div class="boot-options" id="bootOptions">
