--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="startup-logo-ring delay-1"></div>
                 <div class="startup-logo-ring delay-2"></div>
                 <div class="startup-logo">
-                    <i class="fas fa-fish"></i>
+                    <img src="logo.png" alt="Veltra" style="width: 50px; height: 50px; object-fit: contain;">
                 </div>
             </div>
             <h1 class="startup-title">Veltra</h1>
@@ -202,7 +202,7 @@
             <div style="text-align: center; margin-bottom: 2.5rem;">
                 <div
                     style="width: 100px; height: 100px; background: linear-gradient(135deg, var(--accent), var(--accent-hover)); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 1.5rem; animation: float 3s ease-in-out infinite;">
-                    <i class="fas fa-fish" style="font-size: 3rem; color: var(--bg-primary);"></i>
+                    <img src="logo.png" alt="Veltra" style="width: 60px; height: 60px; object-fit: contain;">
                 </div>
                 <h2 style="font-size: 2rem; margin-bottom: 0.5rem; color: var(--text-primary); font-family: fontb;">
                     Welcome to Veltra
@@ -436,7 +436,7 @@
 
     <div id="desktop">
         <div class="wallpaper">
-            <i class="fas fa-fish wallpaper-icon"></i>
+            <img src="logo.png" alt="Veltra" class="wallpaper-icon" style="width: 120px; height: 120px; object-fit: contain;">
             <div class="wallpaper-text">Veltra</div>
             <p class="wallpaper-byline">by dinguschan</p>
         </div>
@@ -508,7 +508,7 @@
         </div>
         <div id="taskbar" class="taskbar">
             <div class="taskbar-icon" onclick="toggleStartMenu()">
-                <i class="fas fa-fish"></i>
+                <img src="logo.png" alt="Veltra" style="width: 24px; height: 24px; object-fit: contain;">
             </div>
             <div class="taskbar-divider"></div>
             <div class="taskbar-icon" onclick="toggleApp('files')" title="Files" data-app="files">
