Fix support center: add request chat, replace emojis, fix walkthrough install button overlap

--- a/app/walkthrough.html
+++ b/app/walkthrough.html
@@ -335,6 +335,9 @@
             cursor: pointer;
             transition: all 0.2s ease;
             margin-left: auto;
+            flex-shrink: 0;
+            position: relative;
+            z-index: 1;
         }
 
         .install-btn:hover {
