Add new logo with CSS filter to convert black to teal color

--- a/app/support.html
+++ b/app/support.html
@@ -12,6 +12,11 @@
             box-sizing: border-box;
         }
 
+        /* Logo filter - converts black to teal */
+        .veltra-logo {
+            filter: invert(78%) sepia(25%) saturate(522%) hue-rotate(112deg) brightness(92%) contrast(87%);
+        }
+
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             background: linear-gradient(135deg, #0a0e1a 0%, #151923 100%);
