--- a/app/walkthrough.html
+++ b/app/walkthrough.html
@@ -12,6 +12,11 @@
             box-sizing: border-box;
         }
 
+        /* Logo filter - converts black to teal */
+        .veltra-logo {
+            filter: invert(78%) sepia(25%) saturate(522%) hue-rotate(112deg) brightness(92%) contrast(87%);
+        }
+
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             background: linear-gradient(135deg, #0a0e1a 0%, #151923 100%);
@@ -378,7 +383,7 @@
         <!-- Slide 1: Welcome -->
         <div class="slide active" id="slide-0">
             <div class="slide-icon animate-in" style="background: transparent; border: none;">
-                <img src="../logo.png" alt="Veltra" style="width: 140px; height: 140px; object-fit: contain;">
+                <img src="../logo.png" alt="Veltra" class="veltra-logo" style="width: 140px; height: 140px; object-fit: contain;">
             </div>
             <h1 class="animate-in delay-1">Welcome to Veltra!</h1>
             <p class="animate-in delay-2">
