Replace logo.png with Font Awesome fish icon

--- a/app/walkthrough.html
+++ b/app/walkthrough.html
@@ -383,7 +383,7 @@
         <!-- Slide 1: Welcome -->
         <div class="slide active" id="slide-0">
             <div class="slide-icon animate-in" style="background: transparent; border: none;">
-                <img src="../logo.png" alt="Veltra" class="veltra-logo" style="width: 140px; height: 140px; object-fit: contain;">
+                <i class="fas fa-fish" style="font-size: 5rem; color: var(--accent);"></i>
             </div>
             <h1 class="animate-in delay-1">Welcome to Veltra!</h1>
             <p class="animate-in delay-2">
