--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 576 512'><path fill='%237DD3C0' d='M180.5 141.5C219.7 108.5 272.6 80 336 80s116.3 28.5 155.5 61.5c39.1 33 66.9 72.4 81 99.8c4.7 9.2 4.7 20.1 0 29.3c-14.1 27.4-41.9 66.8-81 99.8C452.3 403.5 399.4 432 336 432s-116.3-28.5-155.5-61.5c-16.2-13.7-30.5-28.5-42.7-43.1L48.1 379.6c-12.5 7.3-28.4 5.3-38.7-4.9S-3 348.7 4.2 336.1L50 256 4.2 175.9c-7.2-12.6-5-28.4 5.3-38.6s26.1-12.2 38.7-4.9l89.7 52.3c12.2-14.6 26.5-29.4 42.7-43.1zM448 256a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z'/></svg>">
     <title>Veltra</title>
     
     <!-- Firebase SDK -->
@@ -73,7 +73,7 @@
         </div>
         <div class="startup-content">
             <div class="startup-logo-container">
-                <img src="logo.png" alt="Veltra" class="startup-logo-img veltra-logo" style="width: 120px; height: 120px; object-fit: contain; animation: startupLogoPulse 2s ease-in-out infinite;">
+                <i class="fas fa-fish" style="font-size: 5rem; color: var(--accent); animation: startupLogoPulse 2s ease-in-out infinite;"></i>
             </div>
             <h1 class="startup-title">Veltra</h1>
             <p class="startup-subtitle">Initializing your workspace...</p>
@@ -84,7 +84,7 @@
     </div>
 
     <div id="bootloader">
-        <div class="boot-logo"><img src="logo.png" alt="Veltra" class="veltra-logo" style="width: 120px; height: 120px; object-fit: contain;"></div>
+        <div class="boot-logo"><i class="fas fa-fish"></i></div>
         <h1 class="boot-title"><b>Veltra</b></h1>
         <div class="boot-version">Version 1.5</div>
         <div class="boot-options" id="bootOptions">
@@ -197,7 +197,7 @@
             <div style="text-align: center; margin-bottom: 2.5rem;">
                 <div
                     style="width: 100px; height: 100px; background: linear-gradient(135deg, var(--accent), var(--accent-hover)); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 1.5rem; animation: float 3s ease-in-out infinite;">
-                    <img src="logo.png" alt="Veltra" class="veltra-logo" style="width: 100px; height: 100px; object-fit: contain;">
+                    <i class="fas fa-fish" style="font-size: 2.5rem; color: var(--bg-primary);"></i>
                 </div>
                 <h2 style="font-size: 2rem; margin-bottom: 0.5rem; color: var(--text-primary); font-family: fontb;">
                     Welcome to Veltra
@@ -502,7 +502,7 @@
         </div>
         <div id="taskbar" class="taskbar">
             <div class="taskbar-icon" onclick="toggleStartMenu()">
-                <img src="logo.png" alt="Veltra" class="veltra-logo" style="width: 32px; height: 32px; object-fit: contain;">
+                <i class="fas fa-fish"></i>
             </div>
             <div class="taskbar-divider"></div>
             <div class="taskbar-icon" onclick="toggleApp('files')" title="Files" data-app="files">
