Fix Melodify and UV proxy to trust Firebase status, increase timeout

--- a/app/uv.html
+++ b/app/uv.html
@@ -415,7 +415,7 @@
                 const timeout = setTimeout(() => {
                     ws.close();
                     resolve(false);
-                }, 3000); // 3 second timeout
+                }, 5000); // 5 second timeout for slower connections
                 
                 ws.onopen = () => {
                     clearTimeout(timeout);
@@ -431,18 +431,15 @@
         
         // Find working wisp server
         async function findWorkingWisp() {
-            // First try Firebase URL
+            // First try Firebase URL - trust status if online
             try {
                 const resp = await fetch('https://procces-3efd9-default-rtdb.firebaseio.com/backends/veltra.json');
                 const data = await resp.json();
-                if (data?.url) {
+                if (data?.url && data?.status === 'online') {
                     let firebaseWisp = data.url.replace('https://', 'wss://').replace('http://', 'ws://');
                     if (!firebaseWisp.endsWith('/wisp/')) firebaseWisp = firebaseWisp.replace(/\/$/, '') + '/wisp/';
-                    console.log('[UV] Testing Firebase wisp:', firebaseWisp);
-                    if (await testWispConnection(firebaseWisp)) {
-                        console.log('[UV] Firebase wisp is working!');
-                        return firebaseWisp;
-                    }
+                    console.log('[UV] Using Firebase wisp (status online):', firebaseWisp);
+                    return firebaseWisp;
                 }
             } catch (e) { 
                 console.warn('[UV] Firebase fetch failed:', e.message); 
