--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
         <div class="startup-content">
             <div class="startup-logo-container">
-                <i class="fas fa-fish" style="font-size: 5rem; color: var(--accent); animation: startupLogoPulse 2s ease-in-out infinite;"></i>
+                <i class="fas fa-fish startup-fish-icon"></i>
             </div>
             <h1 class="startup-title">Veltra</h1>
             <p class="startup-subtitle">Initializing your workspace...</p>
