Fix broken URLs: veltra-os -> nautilus-os (original project)

--- a/community/dev.html
+++ b/community/dev.html
@@ -86,7 +86,7 @@
 <div class="row gap-sm">
 <a href="./help.html">Help</a>
 <a href="./request.html">Submit</a>
-<a href="https://github.com/veltra-os/community" target="_blank" rel="noopener">GitHub</a>
+<a href="https://github.com/nautilus-os/community" target="_blank" rel="noopener">GitHub</a>
 </div>
 </div>
 </footer>
