--- a/community/help.html
+++ b/community/help.html
@@ -58,7 +58,7 @@
 <small>AGPL-3.0 • © Veltra community</small>
 <div class="row gap-sm">
 <a href="./request.html">Submit</a>
-<a href="https://github.com/veltra-os/community" target="_blank" rel="noopener">GitHub</a>
+<a href="https://github.com/nautilus-os/community" target="_blank" rel="noopener">GitHub</a>
 </div>
 </div>
 </footer>
