--- a/community/request.html
+++ b/community/request.html
@@ -35,11 +35,11 @@
 <section class="container">
 <div class="card prose">
 <h2>Step-by-Step Guide</h2>
-<p>Follow these steps to submit a pull request (PR) to the <a href="https://github.com/veltra-os/community" target="_blank" rel="noopener">Veltra Community repository</a>.</p>
+<p>Follow these steps to submit a pull request (PR) to the <a href="https://github.com/nautilus-os/community" target="_blank" rel="noopener">NautilusOS Community repository</a>.</p>
 
 <ol>
 <li><strong>Fork the Repository</strong><br>
-Click the "Fork" button on the <a href="https://github.com/veltra-os/community" target="_blank" rel="noopener">repository page</a> to create your own copy.</li>
+Click the "Fork" button on the <a href="https://github.com/nautilus-os/community" target="_blank" rel="noopener">repository page</a> to create your own copy.</li>
 
 <li><strong>Clone Your Fork</strong><br>
 Clone the forked repository to your local machine:<br>
@@ -85,7 +85,7 @@ Go to the original repository and click "New Pull Request". Select your branch a
 <div class="row gap-sm">
 <a href="./help.html">Help</a>
 <a href="./request.html">Contribute</a>
-<a href="https://github.com/veltra-os/community" target="_blank" rel="noopener">GitHub</a>
+<a href="https://github.com/nautilus-os/community" target="_blank" rel="noopener">GitHub</a>
 </div>
 </div>
 </footer>
