--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                     <p>Standard User</p>
                 </div>
                 <button class="start-signout-btn"
-                    onclick="window.open('https://github.com/veltra-os/Veltra', '_blank')"
+                    onclick="window.open('https://github.com/nautilus-os/NautilusOS', '_blank')"
                     title="GitHub Repository"
                     style="background: rgba(125, 211, 192, 0.15); border-color: rgba(125, 211, 192, 0.3); color: var(--accent);">
                     <i class="fab fa-github"></i>
