--- a/Veltra-OneFile/index.html
+++ b/Veltra-OneFile/index.html
@@ -9086,7 +9086,7 @@ select {
                     <p>Standard User</p>
                 </div>
                 <button class="start-signout-btn"
-                    onclick="window.open('https://github.com/veltra-os/Veltra', '_blank')"
+                    onclick="window.open('https://github.com/nautilus-os/NautilusOS', '_blank')"
                     title="GitHub Repository"
                     style="background: rgba(125, 211, 192, 0.15); border-color: rgba(125, 211, 192, 0.3); color: var(--accent);">
                     <i class="fab fa-github"></i>
@@ -13863,7 +13863,7 @@ alt="favicon">
                                 <div class="settings-item-title">Bypass File Protocol Warnings</div>
                                 <div class="settings-item-desc">
                                     Allow experimental browser features on file:// protocol. By enabling this, you agree to report any bugs as GitHub issues.
-                                    <a href="https://github.com/veltra-os/Veltra/issues" target="_blank" style="color: var(--primary-blue); text-decoration: underline;">Report issues here</a>
+                                    <a href="https://github.com/nautilus-os/NautilusOS/issues" target="_blank" style="color: var(--primary-blue); text-decoration: underline;">Report issues here</a>
                                 </div>
                             </div>
                             <div class="toggle-switch ${settings.bypassFileProtocolWarnings ? "active" : ""
@@ -14807,7 +14807,7 @@ alt="favicon">
               Made with <i class="fas fa-heart" style="color: #ef4444;"></i> by the Veltra team
             </p>
             <div style="display: flex; justify-content: center; gap: 1rem; flex-wrap: wrap;">
-              <a href="https://github.com/veltra-os/Veltra" target="_blank" style="display: inline-flex; align-items: center; gap: 0.5rem; padding: 0.5rem 1rem; background: rgba(125, 211, 192, 0.15); border: 1px solid rgba(125, 211, 192, 0.3); border-radius: 8px; color: var(--text-primary); text-decoration: none; font-size: 0.85rem; transition: all 0.2s ease;"
+              <a href="https://github.com/nautilus-os/NautilusOS" target="_blank" style="display: inline-flex; align-items: center; gap: 0.5rem; padding: 0.5rem 1rem; background: rgba(125, 211, 192, 0.15); border: 1px solid rgba(125, 211, 192, 0.3); border-radius: 8px; color: var(--text-primary); text-decoration: none; font-size: 0.85rem; transition: all 0.2s ease;"
                    onmouseover="this.style.background='rgba(125, 211, 192, 0.25)'" onmouseout="this.style.background='rgba(125, 211, 192, 0.15)'">
                 <i class="fab fa-github"></i> View on GitHub
               </a>
@@ -15755,8 +15755,8 @@ function handleTerminalInput(e) {
       output.innerHTML = "Submitting purge request to jsDelivr...<br>";
 
       // Asynchronously purge key files
-      fetch('https://purge.jsdelivr.net/gh/veltra-os/community@main/files/info.json').catch(e => { });
-      fetch('https://purge.jsdelivr.net/gh/veltra-os/community@main/apps').catch(e => { });
+      fetch('https://purge.jsdelivr.net/gh/nautilus-os/community@main/files/info.json').catch(e => { });
+      fetch('https://purge.jsdelivr.net/gh/nautilus-os/community@main/apps').catch(e => { });
 
       // We can't actually verify purge easily from client without CORS issues sometimes?
       // But the request fires.
@@ -16555,7 +16555,7 @@ function initTaskbarTooltips() {
 async function downloadOneFile() {
   try {
     showToast("Preparing download...", "fa-download");
-    const response = await fetch('https://raw.githubusercontent.com/veltra-os/Veltra/refs/heads/main/Veltra-OneFile/index.html');
+    const response = await fetch('https://raw.githubusercontent.com/nautilus-os/NautilusOS/refs/heads/main/Veltra-OneFile/index.html');
     if (!response.ok) throw new Error("Network response was not ok");
 
     const blob = await response.blob();
@@ -16571,7 +16571,7 @@ async function downloadOneFile() {
   } catch (error) {
     console.error("Download failed:", error);
     showToast("Download failed! Opening link instead.", "fa-exclamation-triangle");
-    window.open('https://raw.githubusercontent.com/veltra-os/Veltra/refs/heads/main/Veltra-OneFile/index.html', '_blank');
+    window.open('https://raw.githubusercontent.com/nautilus-os/NautilusOS/refs/heads/main/Veltra-OneFile/index.html', '_blank');
   }
 }
 
@@ -27298,7 +27298,7 @@ async function fetchCommunityApps() {
 
   try {
     // Fetch recursive tree
-    const treeUrl = `https://api.github.com/repos/veltra-os/community/git/trees/main?recursive=1&v=${Date.now()}`;
+    const treeUrl = `https://api.github.com/repos/nautilus-os/community/git/trees/main?recursive=1&v=${Date.now()}`;
     const treeResp = await fetch(treeUrl);
 
     if (!treeResp.ok) throw new Error("Failed to fetch repository tree");
@@ -27317,7 +27317,7 @@ async function fetchCommunityApps() {
         // categories: apps, games, themes
         if (!['apps', 'games', 'themes'].includes(category)) return null;
 
-        const cdnUrl = `https://cdn.jsdelivr.net/gh/veltra-os/community@latest/${node.path}?v=${Date.now()}`;
+        const cdnUrl = `https://cdn.jsdelivr.net/gh/nautilus-os/community@latest/${node.path}?v=${Date.now()}`;
         const metaResp = await fetch(cdnUrl);
         if (!metaResp.ok) return null;
 
@@ -27544,7 +27544,7 @@ async function installCommunityApp(app) {
     let content = '';
     // If content is a path (starts with /), fetch it
     if (app.content && typeof app.content === 'string' && app.content.startsWith('/')) {
-      const contentUrl = `https://cdn.jsdelivr.net/gh/veltra-os/community@latest${app.content}`;
+      const contentUrl = `https://cdn.jsdelivr.net/gh/nautilus-os/community@latest${app.content}`;
       const resp = await fetch(contentUrl);
       if (!resp.ok) throw new Error(`Failed to fetch content from ${contentUrl}`);
       content = await resp.text();
