--- a/community/browse.html
+++ b/community/browse.html
@@ -26,7 +26,7 @@
 <main class="container">
 <h1>Browse</h1>
 
-<section id="catalog" class="catalog" data-src="https://raw.githubusercontent.com/veltra-os/community/main/apps.json" data-src2="https://raw.githubusercontent.com/veltra-os/community/main/games.json" data-src3="https://raw.githubusercontent.com/veltra-os/community/main/themes.json"></section>
+<section id="catalog" class="catalog" data-src="https://raw.githubusercontent.com/nautilus-os/community/main/apps.json" data-src2="https://raw.githubusercontent.com/nautilus-os/community/main/games.json" data-src3="https://raw.githubusercontent.com/nautilus-os/community/main/themes.json"></section>
 </main>
 
 
@@ -36,7 +36,7 @@
 <div class="row gap-sm">
 <a href="./help.html">Help</a>
 <a href="./request.html">Submit</a>
-<a href="https://github.com/veltra-os/community" target="_blank" rel="noopener">GitHub</a>
+<a href="https://github.com/nautilus-os/community" target="_blank" rel="noopener">GitHub</a>
 </div>
 </div>
 </footer>
