--- a/community/index.html
+++ b/community/index.html
@@ -65,7 +65,7 @@
 <div class="info">
 <h3>Quick links</h3>
 <div class="quick-links">
-<a href="https://github.com/veltra-os/community" target="_blank" rel="noopener">Community repo</a>
+<a href="https://github.com/nautilus-os/community" target="_blank" rel="noopener">Community repo</a>
 <a href="./dev.html#making-a-theme">Making a theme</a>
 <a href="./dev.html#making-an-app">Making an app</a>
 <a href="./request.html#submit">Submit app/game/theme</a>
@@ -83,7 +83,7 @@
 <div class="row gap-sm">
 <a href="./help.html">Help</a>
 <a href="./request.html">Submit</a>
-<a href="https://github.com/veltra-os/community" target="_blank" rel="noopener">GitHub</a>
+<a href="https://github.com/nautilus-os/community" target="_blank" rel="noopener">GitHub</a>
 </div>
 </div>
 </footer>
